--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -1590,6 +1590,20 @@ wallet:
         title: "Gib die Steuernummer der Körperschaft ein"
         subtitle: "Sie hat 11 Ziffern und ist neben dem QR-Code zu finden."
         placeholder: "Steuernummer der Körperschaft"
+    psp:
+      title: "Wähle, von wem die Zahlung abgewickelt werden soll"
+      description: "Jeder Zahlungsdienstleister (PSP) schlägt eine Provision vor."
+      taxDescription: "In dieser Liste findest du alle kompatiblen Anbieter,"
+      taxDescriptionBold: "auch wenn du nicht deren Kunde bist."
+      defaultName: "Anbieter (PSP)"
+      pspTitle: "Anbieter (PSP)"
+      pspSortButton: "Sortieren"
+      featuredReason: "Weil du bereits Kunde bist"
+      continueButton: "Weiter"
+      sortBottomSheet:
+        default: "Standard"
+        amount: "Nach Betrag"
+        name: "Nach Name"
 saveCard:
   saveCard: "Karte speichern"
   header: "Möchtest du diese Karte speichern?"
