--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -1643,6 +1643,13 @@ wallet:
     cancel: No, continua
     success: Problemi con l'aggiunta? Contatta la tua banca.
   payment:
+    methodSelection:
+        header: Seleziona un metodo
+        yourMethods: I tuoi metodi
+        otherMethods: Altri metodi
+        alert: 
+          body: "A causa dell’importo elevato, alcuni metodi non sono disponibili."
+          cta: "Ok, ho capito!"
     barcodes:
       choice:
         title: Sono stati rilevati più codici. Quale vuoi usare?
