chore: [IOAPPFD0-198] Redesign of the developer section with better organization (#5324)
## Short description
This PR includes a redesign of the developer section with better
organization.

## List of changes proposed in this pull request
- Create new `DeveloperModeSection`
- Move the general _Debug mode_ switch at the top
- Group different sections by function:
  - Playground
  - Test environment
  - Human Interface
  - Data (IDs and tokens)
  - Actions
- Rename some sections to avoid redundant text (e.g: _Markdown
Playground_ (under _Playground_) simply became _Markdown_)
- Rename some section to use official brand names (_PN_ became _SEND_,
and so on…)
- Remove the end of the page component because it was too tall

### Preview


https://github.com/pagopa/io-app/assets/1255491/8fcc2f07-c341-435c-8efa-db4f33b1f54c



## How to test
Go to the **Profile → Developers**

---------

Co-authored-by: Cristiano Tofani <cri.tofani@gmail.com>
Co-authored-by: Mario Perrotta <mario.perrotta@pagopa.it>

--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -417,6 +417,7 @@ profile:
       title: "Über IO"
       description: "Erfahren mehr über die IO-App"
     developersSectionHeader: "Entwickler"
+    testEnvironmentSectionHeader: "Testumgebung"
     pagoPaEnvironment:
       pagoPaEnv: "pagoPA Testumgebung"
       pagoPAEnvAlert: "Diese Änderung erfordert einen Neustart der App"
