change icon and fix typo

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -688,7 +688,7 @@ authentication:
     button_accept_lv: Continue with quick access
     button_decline_lv: Authenticate with SPID or CIE every 30 days
   security_suggestions:
-    fingerprint: Do not share your or unlock code or biometric recognition with anyone.
+    fingerprint: Do not share your unlock code or biometric recognition with anyone.
     io_logout: If you lose your device, log out from the web.
     io_lock_access: If you fear that someone might use your SPID or CIE, lock access to the app after authenticating from the web.
     access_new_device: If you access IO with someone else's device, remember to log out when you are finished.
