--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -688,7 +688,7 @@ authentication:
     button_accept_lv: Continua con l’accesso rapido
     button_decline_lv: Autenticati con SPID o CIE ogni 30 giorni
   security_suggestions:
-    fingerprint: Non condividere il tuo o codice di sblocco o riconoscimento biometrico con nessuno
+    fingerprint: Non condividere il tuo codice di sblocco o riconoscimento biometrico con nessuno
     io_logout: Se perdi il dispositivo, esci dall’app da web
     io_lock_access: Se temi che qualcuno possa usare il tuo SPID o CIE, puoi bloccare l’accesso all’app entrando dal web
     access_new_device: Se accedi a IO con un dispositivo di altri, ricordati di uscire dall’app quando hai finito
