--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -720,7 +720,7 @@ email:
       subtitle: "Um die App weiter nutzen zu können, musst du deine E-Mail-Adresse bestätigen"
       editButton: "E-Mail-Adresse ändern"
       validateButton: "E-Mail-Adresse bestätigen"
-      header: 
+      header:
         title: "IO konfigurieren"
       help:
         body: "Um die App weiter nutzen zu können, musst du deine E-Mail-Adresse bestätigen"
@@ -729,7 +729,7 @@ email:
       subtitleStart: "Deine E-Mail-Adresse"
       subtitleEnd: "wird bereits auf IO verwendet; du musst eine andere eingeben, um die App weiter benutzen zu können."
       editButton: "E-Mail-Adresse ändern"
-      header: 
+      header:
         title: "IO konfigurieren"
       help:
         body: "Deine E-Mail-Adresse wird bereits auf IO verwendet; du musst eine andere eingeben, um die App weiter benutzen zu können."
@@ -936,7 +936,7 @@ payment:
         description: "IO hat keine Zahlungsversuche gespeichert. Hier findest du deine letzten Zahlungsversuche"
       title: "Zahlungsversuche"
       iuv: "Einheitlicher Zahlungskodex (IUV) {{iuv}}"
-  confirm: 
+  confirm:
     totalAmount: "Zu zahlender Gesamtbetrag"
     pay: "Zahle "
     payWith: "Zahle mit "
@@ -1617,7 +1617,7 @@ wallet:
         amount: "Nach Betrag"
         name: "Nach Name"
     outcome:
-      success:
+      SUCCESS:
         title: "Du hast {{amount}} bezahlt"
         button: "OK, schließen"
         banner:
