--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -978,7 +978,7 @@ payment:
         description: IO didn't store any payment attempts. Here you can find last payment attempts
       title: Payment attempts
       iuv: IUV payment {{iuv}}
-  confirm: 
+  confirm:
     totalAmount: Totale da pagare
     pay: Paga
     payWith: Paga con
@@ -1644,13 +1644,6 @@ wallet:
     cancel: Keep adding
     success: Problems while adding your card? Please contact your bank.
   payment:
-    methodSelection:
-        header: Seleziona un metodo
-        yourMethods: I tuoi metodi
-        otherMethods: Altri metodi
-        alert: 
-          body: "A causa dell’importo elevato, alcuni metodi non sono disponibili."
-          cta: "Ok, ho capito!"
     barcodes:
       choice:
         title: Sono stati rilevati più codici. Quale vuoi usare?
@@ -1663,6 +1656,17 @@ wallet:
         title: Inserisci il codice fiscale dell’Ente Creditore
         subtitle: Ha 11 cifre, lo trovi vicino al codice QR.
         placeholder: Codice fiscale Ente Creditore
+    abortDialog:
+      title: Vuoi interrompere l'operazione?
+      confirm: Sì, interrompi
+      cancel: No, torna indietro
+    methodSelection:
+      header: Seleziona un metodo
+      yourMethods: I tuoi metodi
+      otherMethods: Altri metodi
+      alert:
+        body: "A causa dell’importo elevato, alcuni metodi non sono disponibili."
+        cta: "Ok, ho capito!"
     psp:
       title: Scegli chi gestirà il pagamento
       description: Ogni gestore propone una commissione.
@@ -1671,13 +1675,16 @@ wallet:
       defaultName: Gestore
       pspTitle: Gestore
       pspSortButton: Ordina
-      featuredReason: Perché sei già cliente 
+      featuredReason: Perché sei già cliente
       continueButton: Continua
       sortBottomSheet:
         default: Default
         amount: Per importo
         name: Per nome
     outcome:
+      cancelled:
+        title: L’operazione è stata annullata
+        subtitle: Non è stato addebitato alcun importo.
       success:
         title: Hai pagato {{amount}}
         button: Ok, chiudi
