feat: [IOBP-309, IOBP-312] Add error handling for payment verification and activation requests (#5378)
## Short description
This PR adds the handling of failures during the verification and
activation requests for a payment.

## List of changes proposed in this pull request
- Added `WalletPaymentFailure` type
- Added `WalletPaymentFailureDetail` component to display payment
failures
- Added `usePaymentFailureSupportModal` hook to display the payment
support request bottom sheet modal
- Added required locale keys

## How to test
Using the io-dev-api-server, checkout this branch
https://github.com/pagopa/io-dev-api-server/pull/335 and add the
following to the config.json:
```json
 "features": {
    "wallet": {
      "verificationFailure": {
        "faultCodeCategory": "PAYMENT_UNAVAILABLE",
        "faultCodeDetail":"PPT_PSP_SCONOSCIUTO"
      }
    }
  }
 ```
 With the IO app, navigate to the wallet payment playground and check that the failure is correctly displayed.

## Preview

https://github.com/pagopa/io-app/assets/6160324/03ec83b8-68c5-4d77-83a1-3bfd7dd8afcd

---------

Co-authored-by: Alessandro Izzo <alessandro.izzo998@gmail.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1681,6 +1681,41 @@ wallet:
         default: Default
         amount: Per importo
         name: Per nome
+    failure:
+      PAYMENT_UNAVAILABLE:
+        title: "C’è un problema tecnico con questo avviso"
+      PAYMENT_UNKNOWN:
+        title: "I dati dell’avviso non sono corretti"
+      DOMAIN_UNKNOWN:
+        title: "L’Ente Creditore sta avendo problemi nella risposta"
+        subtitle: "Riprova più tardi. Se il problema persiste, contatta l’assistenza."
+      PAYMENT_ONGOING:
+        title: "C’è già un pagamento in corso, riprova più tardi"
+        subtitle: "Se il problema persiste, puoi aprire una segnalazione."
+      PAYMENT_EXPIRED:
+        title: "L’avviso è scaduto e non è più possibile pagarlo"
+        subtitle: "Contatta l’Ente per maggiori informazioni."
+      PAYMENT_CANCELED:
+        title: "L’Ente Creditore ha revocato questo avviso"
+        subtitle: "Contatta l’Ente per maggiori informazioni."
+      PAYMENT_DUPLICATED:
+        title: "Questo avviso è stato già pagato!"
+      GENERIC_ERROR:
+        title: "Si è verificato un errore imprevisto"
+        subtitle: "Riprova, oppure contatta l’assistenza."
+      PAA_PAGAMENTO_SCONOSCIUTO:
+        title: "Non riusciamo a trovare l’avviso"
+        subtitle: "L’avviso potrebbe essere stato già pagato. Per ricevere assistenza, contatta l’Ente Creditore che lo ha emesso."
+    support:
+      button: "Contatta l'assistenza"
+      supportTitle: Contatta l'assistenza
+      phone: Chiama {{phoneNumber}}
+      chat: Chiedi aiuto in chat
+      additionalDataTitle: "Dati aggiuntivi"
+      copyAll: Copia tutti
+      errorCode: Codice errore
+      noticeNumber: Codice avviso
+      entityCode: Codice Fiscale Ente
     outcome:
       cancelled:
         title: L’operazione è stata annullata
