chore: [IOBP-466] Add gallery permission request in barcode scan screen for iOS devices (#5334)
⚠️ Depends on https://github.com/pagopa/io-app/pull/5313

## Short description
This PR adds the image gallery permission request in barcode scan screen
for iOS devices

## List of changes proposed in this pull request
- Added `react-native-permissions` package
- Added `react-native-permissions` configuration in `Podfile`
- Updated `@pagopa/io-app-design-system` to v 1.19.0
- Removed `react-native` and `@types/react-native` patches for Android
media permissions, now being managed by `react-native-permissions`
library
- Replaced permission request functions in `ts/utils/permissions.ts`
with new implementation using `react-native-permissions`
- Renamed `AndroidMediaPermissionRequestScreen ` to
`GalleryPermissionInstructionsScreen`, which now displays instructions
for both Android and iOS devices

## How to test
Check the following with a fresh install on both iOS and Android
devices:
- navigate to the barcode scan screen and tap on **Upload > Upload
image**, a prompt should be shown to request gallery permissions. If
permissions are denied, a screen with instructions is shown
- navigate to the **Profile > Preferences** section, tap on **Preferred
Calendar**, a prompt should be shown to request calendar permissions

## Preview


https://github.com/pagopa/io-app/assets/6160324/2ec97018-261a-4323-91d8-15a194841773

---------

Co-authored-by: Martino Cesari Tomba <60693085+forrest57@users.noreply.github.com>
Co-authored-by: Andrea Piai <andrea.piai@pagopa.it>
Co-authored-by: Alessandro Izzo <alessandro.izzo998@gmail.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3966,15 +3966,20 @@ transaction:
       iuv: IUV
       subject: Oggetto del pagamento
 permissionRequest:
-  media:
+  gallery:
     title: Consenti a IO di accedere alle tue foto
     subtitle: Per farlo, devi modificare le preferenze nelle impostazioni di sistema del tuo dispositivo.
     caption: "Ecco come:"
     step: Step {{step}}
     steps:
-      1: Vai su “Impostazioni”
-      2: Seleziona “Applicazioni”
-      3: Seleziona “IO”
-      4: Seleziona la voce relativa alle autorizzazioni
-      5: Consenti l’accesso a file e media
+      android:
+        1: Vai su “Impostazioni”
+        2: Seleziona “Applicazioni”
+        3: Seleziona “IO”
+        4: Seleziona la voce relativa alle autorizzazioni
+        5: Consenti l’accesso a file e media
+      ios:
+        1: Vai su “Impostazioni”
+        2: Seleziona “IO”
+        3: Seleziona “Foto” e consenti l’accesso
     cta: Apri Impostazioni
