--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -2415,15 +2415,16 @@ transaction:
       iuv: "IUV"
       subject: "Zahlungsgrund"
 permissionRequest:
-  media:
+  gallery:
     title: "Erlaube  IO den Zugriff auf deine Fotos"
     subtitle: "Dazu musst du die Rechte in den Einstellungen deines Geräts ändern."
     caption: "So geht's:"
     step: "Schritt {{step}}"
     steps:
-      1: "Geh zu “Einstellungen”"
-      2: "Wähle “Apps”"
-      3: "Wähle “IO”"
-      4: "Wähle den Punkt App-Berechtigungen"
-      5: "Lass den Zugriff auf Dateien und Medien zu"
+      android:
+        1: "Geh zu “Einstellungen”"
+        2: "Wähle “Apps”"
+        3: "Wähle “IO”"
+        4: "Wähle den Punkt App-Berechtigungen"
+        5: "Lass den Zugriff auf Dateien und Medien zu"
     cta: "Öffne Einstellungen"
