--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -728,6 +728,7 @@ authentication:
       error_1001: "Accesso negato: non hai l'età minima richiesta per usare IO"
   expiredSessionBanner:
     title: Avviso di sicurezza
+    message: Per mantenere al sicuro i tuoi dati privati, accedi nuovamente con le tue credenziali SPID, grazie!
   unlock:
     title: Sblocca l’accesso
     subtitlel2: Per poter usare l'app, devi prima sbloccare l'accesso a IO.
@@ -1630,10 +1631,6 @@ wallet:
         title: "La tua carta è stata aggiunta con successo!"
     payment:
       success:
-        banner:
-          title: Puoi dirci com’è andata?
-          content: Raccontaci la tua esperienza con il pagamento e aiutaci a migliorare.
-          action: Vai al sondaggio
         title: "Grazie, l’operazione è stata eseguita con successo!"
         description1: "Abbiamo inviato una ricevuta a"
         description2: "Puoi trovarla anche nel tuo Portafoglio."
@@ -1714,6 +1711,10 @@ wallet:
       SUCCESS:
         title: Hai pagato {{amount}}
         button: Ok, chiudi
+        banner:
+          title: Puoi dirci com’è andata?
+          content: Raccontaci la tua esperienza con il pagamento e aiutaci a migliorare.
+          action: Vai al sondaggio
       GENERIC_ERROR:
         title: Si è verificato un errore imprevisto
         subtitle: Non è stato addebitato alcun importo.
@@ -3848,6 +3849,16 @@ fastLogin:
   whatsNew:
     title: Abbiamo migliorato l’accesso a IO!
     subtitle: Ora puoi accedere all'app utilizzando il tuo SPID o la tua CIE solo una volta all'anno. Ti basterà poi utilizzare il tuo codice di sblocco o il biometrico per entrare.
+    changes:
+      first:
+        title: Più semplice
+        description: accedi inserendo solo il codice di sblocco dell’app o con il biometrico.
+      second:
+        title: Più veloce
+        description: ti chiederemo di autenticarti con SPID o CIE solo una volta all’anno o se ti disconnetti dall’app.
+      third:
+        title: Più sicura
+        description: a ogni nuovo accesso con SPID o CIE, ti invieremo un’email.
 whatsNew:
   title: Cosa cambia?
 bonusCard:
