--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -2459,7 +2459,7 @@ transaction:
     title: "Details zur Transaktion"
     totalAmount: "Insgesamt"
     totalFee: "Der Gesamtbetrag umfasst "
-    totalFeePsp: "Provision, berechnet von {{pspName}}"
+    totalFeePsp: "Provision, berechnet von {{pspName}}."
     totalFeeNoPsp: "Provision, die vom Transaktionsdienstleister (PSP) erhoben wird."
     info:
       title: "Informationen zur Transaktion"
