--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -3859,7 +3859,7 @@ transaction:
     title: Dettaglio operazione
     totalAmount: Totale
     totalFee: Il totale comprende
-    totalFeePsp: di commissione, applicata da {{pspName}}
+    totalFeePsp: "di commissione, applicata da {{pspName}}."
     totalFeeNoPsp: "di commissione, applicata dal gestore della transazione (PSP)."
     info:
       title: Informazioni sulla transazione
